syntax = "proto3";

package subdomain;
option java_package = "com.subdomain";

service ResolveDnsService {
    rpc ResolveDns(ResolveDnsRequest) returns (ResolveDnsResponse) {};
}

message ResolveDnsRequest {
  repeated string hosts = 1;
}

message ResolveDnsResponse {
  repeated string subdomain = 1;
}
